--- a/baekjoon/baekjoon/baekjoon.vcxproj
+++ b/baekjoon/baekjoon/baekjoon.vcxproj
@@ -146,7 +146,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="11104.cpp" />
+    <ClCompile Include="cpp\11104.cpp" />
+    <ClCompile Include="cpp\2698.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
