--- a/baekjoon/baekjoon/baekjoon.vcxproj.filters
+++ b/baekjoon/baekjoon/baekjoon.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="cpp\5613.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\1812.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
