--- a/baekjoon/baekjoon/baekjoon.vcxproj
+++ b/baekjoon/baekjoon/baekjoon.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cpp\10707.cpp" />
     <ClCompile Include="cpp\11104.cpp" />
     <ClCompile Include="cpp\1812.cpp" />
     <ClCompile Include="cpp\2698.cpp" />
