--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 *.user
 *.userosscache
 *.sln.docstates
-*.vcxproj*
+*.vcxproj
+*.vcxproj.filters
 *.sln
 
 # User-specific files (MonoDevelop/Xamarin Studio)
