--- a/baekjoon/baekjoon/baekjoon.vcxproj
+++ b/baekjoon/baekjoon/baekjoon.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="cpp\10707.cpp" />
     <ClCompile Include="cpp\11104.cpp" />
+    <ClCompile Include="cpp\1145.cpp" />
     <ClCompile Include="cpp\1812.cpp" />
     <ClCompile Include="cpp\2698.cpp" />
     <ClCompile Include="cpp\5613.cpp" />
