--- a/baekjoon/baekjoon/baekjoon.vcxproj.filters
+++ b/baekjoon/baekjoon/baekjoon.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="cpp\10707.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\1145.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
